post documentation finished

--- a/beestock.yml
+++ b/beestock.yml
@@ -323,6 +323,75 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/response200'
+  /api/import/outboundOrders:
+    post:
+      summary: Pedidos de saída
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                orderNumber:
+                  type: string
+      responses:
+        '200':
+          $ref: '#/components/responses/response200'
+  /api/import/ranges:
+    post:
+      summary: Alcances
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                orderNumber:
+                  type: string
+      responses:
+        '200':
+          $ref: '#/components/responses/response200'
+  /api/import/balances:
+    post:
+      summary: Balanços
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                orderNumber:
+                  type: string
+      responses:
+        '200':
+          $ref: '#/components/responses/response200'
+  /api/import/inboundDocuments:
+    post:
+      summary: Documentos de entrada
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                orderNumber:
+                  type: string
+      responses:
+        '200':
+          $ref: '#/components/responses/response200'
+  /api/import/billingReturn:
+    summary: Devolução de Faturamento
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                orderNumber:
+                  type: string
+      responses:
+        '200':
+          $ref: '#/components/responses/response200'
 components:
   responses:
     response200:
