--- a/beestock.yml
+++ b/beestock.yml
@@ -2348,3 +2348,51 @@ paths:
           $ref: "#/components/responses/response200"
         "401":
           $ref: "#/components/responses/response401"
+  /api/import/serialLabelAndGroups:
+    post:
+      summary: Etiqueta Agrupadora e Seriada
+      description: Esta rota é utilizada para aprovação de Etiquetas Agrupadoras.
+      tags:
+        - "BeeStock"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                token:
+                  type: string
+                  example: "9e83a0bdf14a097f92522a4754667969765dddcb"
+                  description: Token de acesso
+                serialGroups:
+                  type: array
+                  items:
+                    type: object
+                    required:
+                      - branchCode
+                      - productCode
+                      - depositCode
+                      - productionOrder
+                    properties:
+                      branchCode:
+                        type: string
+                        example: 99999
+                        description: Código da Filial
+                      productCode:
+                        type: string
+                        example: 12345
+                        description: Código do Produto
+                      depositCode:
+                        type: string
+                        example: 99999
+                        description: Código do Depósito
+                      productionOrder:
+                        type: string
+                        example: 12345
+                        description: Código da Ordem de Produção
+      responses:
+        "200":
+          $ref: "#/components/responses/response200"
+        "401":
+          $ref: "#/components/responses/response401"   
